fix(footer): top text on small screens

--- a/src/blocks/footer/style.css
+++ b/src/blocks/footer/style.css
@@ -17,6 +17,7 @@
     height: 14rem;
     background-color: white;
     border-radius: 25px;
+    text-align: center;
     transform: translateY(2.125rem);
 }
 
@@ -174,17 +175,6 @@
     text-align: center;
 }
 
-@media (max-width: 600px) {
-    .evolutio-footer__top {
-        padding: 0;
-    }
-
-    .evolutio-footer__contactbox {
-        border-radius: 0 0 25px 25px;
-    }
-
-}
-
 @media (max-width: 782px) {
     .evolutio-footer__brandcontainer {
         min-width: 100%;
@@ -211,5 +201,27 @@
 
     .evolutio-footer__mobile-legals {
         display: flex;
+    }
+}
+
+@media (max-width: 600px) {
+    .evolutio-footer__top {
+        padding: 0;
+    }
+
+    .evolutio-footer__contactbox {
+        border-radius: 0 0 25px 25px;
+    }
+
+}
+
+@media (max-width: 350px) {
+    .evolutio-footer__contactbox {
+        padding: 1.5rem;
+        height: 10rem;
+    }
+
+    .evolutio-footer__contacttext {
+        display: none;
     }
 }
